fix: jump.html

--- a/themes/fractal/source/css/_index/cube.styl
+++ b/themes/fractal/source/css/_index/cube.styl
@@ -17,6 +17,8 @@ $cube-panel-gutter:= 14px
     transform: translateZ(-($cube-size / 2)) rotateY(90deg)
   &.show--right
     transform: translateZ(-($cube-size / 2)) rotateY(-90deg)
+  &.show--right1
+    transform: translateZ(-($cube-size / 2)) rotateY(270deg)
   &.show--top
     transform: translateZ(-($cube-size / 2)) rotateX(-90deg)
   &.show--bottom
